--- a/posts/Analysis of Argo Float Data in the Bay of Bengal/index.qmd
+++ b/posts/Analysis of Argo Float Data in the Bay of Bengal/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Basic R"
+title: "Analysis of Argo Float Data in the Bay of Bengal"
 author: "Hafez Ahmad"
 date: "2022-10-16"
 categories: [news, code, analysis]
@@ -11,9 +11,3 @@ You will find basic R codes
 ```{r}
 1+2
 ```
-
-git commit -m "comments"
-
-git add .
-
-git push -f origin master
