--- a/posts/Machine learning/index.qmd
+++ b/posts/Machine learning/index.qmd
@@ -2,7 +2,7 @@
 title: "Machine learning"
 author: "Hafez Ahmad"
 date: "2022-10-16"
-categories: [news, code, analysis]
+categories: [code, analysis]
 image: "image.jpg"
 ---
 
