--- a/about.qmd
+++ b/about.qmd
@@ -20,3 +20,51 @@ about:
 **Personal Website for Regular Writing, Training,and Teaching**
 
 Experienced in Project Management,Observational Oceanography,Marine Community Ecology, Geoinformatics, Wildlife habitat management, Hydrology and Remote Sensing,Strategic Planning, and Data Analysis , and problem solving with automation (Python, R, MATLAB, Julia, Google Earth Engine, ArcGIS, Adobe Illustrator, Excel).I am passionate about physical Oceanographic ,Marine Ecology, Aquatic wild habitats ,coastal Development Research and Machine learning . I will be happy to be part of your Research Groups.I have a Bachelor's Degree in Oceanography from the Faculty of Marine Science and Fisheries, [University of Chittagong ,Bangladesh](https://cu.ac.bd) and I was also an Exchange student at [Florida Gulf Coast University, Florida, USA](https://www.fgcu.edu/)I am currently Graduate student at [Mississippi State University,Mississippi, USA](https://www.msstate.edu/). More information about my Research and Activities can be found at Education section.
+
+# Current Projects(\*) and Completed Projects
+
+1.  Detection and tracking of mesoscale eddies in the Bay of Bengal using Satellite altimetry data \*
+
+2.  Hydrologic and geospatial analyses to quantify surface-water connectivity of Lower Mississippi river and develop framework for evaluating tradeoffs between limiting invasion risks and maintaining hydrologic connectivity of oxbow lakes\*
+
+3.  Applications of Machine learning in Computational Oceanographic Research *Vulnerability of Sundarbans to Climate Change and Cyclone Intensification: Mapping, Dynamics and Future Change Analysis of Mangrove Forest Using Landsat Data.*
+
+4.  Simulation of the land use/land cover and land surface temperature change in the chittagong city corpoeration using QGIS\*
+
+5.  Land use assessment and forecasting in the teknaf Upazila, Bangladesh. Simulation of the future land use/land cover change in the Starkville, Mississippi,USA\*
+
+6.   Vulnerability of Sundarbans to Climate Change and Increased storminess: Mapping and dynamics and future changes analysis of mangrove forest using Landsat analysis\*
+
+7.  Marine Spatial Planning to support Integrated Coastal zone Management in Bangladesh \*
+
+8.  Spatio--temporal variability of SST,SSS and Primary productivity in the Bay of Bengal.
+
+9.  A case study for the Biodiversity Assessment and land cover in the Sundarbans mangrove forest.
+
+10. Collaborative Research: The tropicalization of Western Atlantic seagrass beds (Volunteered in [Dr. James Douglass](jdouglass@fgcu.edu)'s marine ecology lab)
+
+11. Status and Future Trends of the Bangladesh Coastal Zone Management and coastal risks.
+
+12. Present status of impacts of climate change and adaptations in Bangladesh coastal areas.
+
+13. Vegetation and Land cover analysis in response to Precipitation and land surface temperature of Oktibbeha County of Mississippi, USA
+
+14. Integrated Management of Coastal Resources of Saint Martin's Island in Bangladesh.
+
+# Google Scholar
+
+[Google Scholar](https://scholar.google.com/citations?user=ToH-NhkAAAAJ&hl=en) citations total 102, h-index: 3, and i10-index: 2, \[5/2/2022\]
+
+# My Activities at a glance
+
++------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| **Ocean research**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       | **Nature conservation and Ocean Literacy**                                                                                                                                                                                                                                                                                                                                                           |
++==========================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================+======================================================================================================================================================================================================================================================================================================================================================================================================+
+| **Physical Oceanography,Ecosystem Oceanography,Bio-optics Oceanography** Ocean productivity, Biological effects on Ocean's optical properties,Coastal zone management, climate change,Climate hazards, SDM,EcoHydrology,connectivity, Estuarine processes, Aquatic wildlife habitats and Oceanographic data collection distribution of temperature and salinity,Coastal and Deep-ocean processes, up-welling, water mass formation and movement, ocean currents, interior and surface mixing, energy inputs and dissipation, surface and internal waves, and surface and internal tides.**Marine Biodiversity , Ecosystem and Modeling** | Nature Conservation is important for many reasons, not least of all to the health of the planet. However, the study of the subject goes merely beyond health and ecosystems. I like to work with Nature and Nature based solutions projects. I did some conservation stuffs and Research in the coastal area of Bangladesh and I love to teach Ocean Literacy and you can visit Our official website |
++------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| **Programming and Mapping**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | **Traveling**                                                                                                                                                                                                                                                                                                                                                                                        |
+|                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |                                                                                                                                                                                                                                                                                                                                                                                                      |
+| Many oceanographers grow up loving the sea and its creatures. but when It comes in Data analysis and Modeling , you have to gain programming knowledge. fortran is widely used langauge in ocean Model. then During the last couple of decades, Matlab has been the most commonly-used scripting language in physical oceanography, and it has a large user base in many other fields.\                                                                                                                                                                                                                                                  |                                                                                                                                                                                                                                                                                                                                                                                                      |
+| Recently, however, Python has been gaining ground, often being adopted by former Matlab users as well as by newcomers. **I have excellent working skill of Python ,Julia , R , Matlab, FORTRAN. ArcGIS , QGIS,SAGA,GRASS** .\                                                                                                                                                                                                                                                                                                                                                                                                            |                                                                                                                                                                                                                                                                                                                                                                                                      |
+| you can find more in github repo                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |                                                                                                                                                                                                                                                                                                                                                                                                      |
++------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
