--- a/posts/Analysis of Argo Float Data in the Bay of Bengal/index.qmd
+++ b/posts/Analysis of Argo Float Data in the Bay of Bengal/index.qmd
@@ -2,8 +2,9 @@
 title: "Analysis of Argo Float Data in the Bay of Bengal"
 author: "Hafez Ahmad"
 date: "2022-10-16"
-categories: [news, code, analysis]
+categories: [code, analysis]
 image: "image.jpg"
+format: html
 ---
 
 You will find basic R codes
