--- a/posts/Species Distribution modeling/index.qmd
+++ b/posts/Species Distribution modeling/index.qmd
@@ -2,7 +2,7 @@
 title: "Species distribution modeling"
 author: "Hafez Ahmad"
 date: "2022-10-16"
-categories: [news, code, analysis]
+categories: [code, analysis]
 image: "image.jpg"
 format: html
 ---
